K8s/Kustomize/base/sockshop/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 3
  selector:
    matchLabels:
      name: front-end
  template:
    metadata:
      labels:
        name: front-end
    spec:
      containers:
        - name: front-end
          image: weaveworksdemos/front-end:0.3.12
          resources:
            limits:
              cpu: 300m
              memory: 8000Mi
            requests:
              cpu: 100m
              memory: 300Mi
          ports:
            - containerPort: 8079
          #----------------------------------------------------
          securityContext:
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true

          livenessProbe:
            httpGet:
              path: /
              port: 8079
            initialDelaySeconds: 300
            periodSeconds: 3

          readinessProbe:
            httpGet:
              path: /
              port: 8079
            initialDelaySeconds: 30
            periodSeconds: 3
# SESSION_REDIS ? --> Use Redis to store user session data (like login info, cart contents, etc.) instead of storing it in memory.
# Why Redis?
# Sessions in memory are lost if the pod restarts.
# Redis is a fast, persistent store that can be shared across pods.
# This enables scalability — multiple frontend pods can access the same session data.
