K8s/Kustomize/base/sockshop/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  # annotations:
  #   prometheus.io/scrape: 'true'
  labels:
    name: front-end
spec:
  ports:
    - protocol: TCP
    - port: 80
      targetPort: 8079
  selector:
    name: front-end
